z-index fix attempts

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -53,7 +53,7 @@ ul.tabs
   li.active
     display: block
 
-.cta
+.cta, .cta-blue, .cta-green, .cta-yellow
   z-index: auto
 a:link.cta, a:visited.cta, a.cta
   color: white
@@ -117,6 +117,7 @@ a:link.cta, a:visited.cta, a.cta
   z-index: 100
 
 #flash
+  z-index: 10
   font-size: 20px
   a.close
     color: black
